# mailer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/mailer-cli/: SKILL.md
.claude/skills/mailer-cli/references/: cli-reference.md
.github/: FUNDING.yml
examples/: README.md  basic_usage.py  list_messages.py  send_email.py
mailer/: __init__.py  attachments.py  auth.py  cli.py  database.py  drafts.py  errors.py  export.py  formatters.py  labels.py  messages.py  parsing.py  storage.py  threads.py  types.py
tests/: __init__.py  conftest.py  test_attachments.py  test_auth.py  test_cli.py  test_database.py  test_drafts.py  test_errors.py  test_export.py  test_formatters.py  test_labels.py  test_messages.py  test_parsing.py  test_storage.py  test_threads.py  test_types.py
